--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
                             <span th:text="'Заявка от ' + ${req.userName}" ></span>
                         </h5>
 
-                        <p class="card-text" th:text="'Курс: ' + ${req.courseName}"></p>
+                        <p class="card-text" th:text="'Курс: ' + ${req.course.name}"></p>
                         <p class="card-text" th:text="${req.commentary}"></p>
 
                         <div class="row">
