--- a/src/main/resources/templates/add_request.html
+++ b/src/main/resources/templates/add_request.html
@@ -30,7 +30,15 @@
 
             <div class="row mt-2">
               <div class="col-12">
-                <input type="text" class="form-control" name="courseName" placeholder="Выберите курс :" required>
+<!--                <input type="text" class="form-control" name="courseName" placeholder="Выберите курс :" required>-->
+                <select class="form-select" name="course.id">
+                  <option th:each="crs : ${courses}"
+                          th:text="${crs.name}"
+                          th:value="${crs.id}">
+
+                  </option>
+                </select>
+
               </div>
             </div>
 
